force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/FSM_DCFFormFieldMapping__mdt.object-meta.xml
<CustomObject>
    <description>To hold the Object, Record Type and Field Mapping for JSON payload build for Data Capture Forms.
SFI-35</description>
    <label>DCF Form Field Mapping</label>
    <pluralLabel>DCF Form Field Mappings</pluralLabel>
</CustomObject>