force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this setting Active, SFI-35</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>