force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/fields/FSM_DataType__c.field-meta.xml
<CustomField>
    <fullName>FSM_DataType__c</fullName>
    <description>Data Type of the field, SFI-35</description>
    <label>Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>LongText</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Date/Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>