force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/fields/FSM_FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FSM_FieldAPIName__c</fullName>
    <description>API Name of teh Field related to the object, SFI-35</description>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>