force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/fields/FSM_FormName__c.field-meta.xml
<CustomField>
    <fullName>FSM_FormName__c</fullName>
    <description>All record type API names from DCF object, SFI-35</description>
    <label>Form Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSM_ShortDurationWorks</fullName>
            </value>
            <value>
                <fullName>FSM_NHHMeter</fullName>
            </value>
            <value>
                <fullName>FSM_GapSite</fullName>
            </value>
            <value>
                <fullName>FSM_SiteAreaSWDFoul</fullName>
            </value>
            <value>
                <fullName>FSM_JobCompletion</fullName>
            </value>
            <value>
                <fullName>FSM_PreSiteChecklist</fullName>
            </value>
            <value>
                <fullName>FSM_RiskAssessmentSiteSpecific</fullName>
            </value>
            <value>
                <fullName>FSM_DSTSelfAudit</fullName>
            </value>
            <value>
                <fullName>FSM_ValveManagement</fullName>
            </value>
            <value>
                <fullName>FSM_NoninfraRaiseneworfollowonwork</fullName>
            </value>
            <value>
                <fullName>Infra_Follow_On_Work_Request</fullName>
            </value>
            <value>
                <fullName>FSM_DiggerTrailerChecksCGCheck</fullName>
            </value>
            <value>
                <fullName>FSM_SewerageJobFeedback</fullName>
            </value>
            <value>
                <fullName>FSM_SewerageFurtherWorkRequestSCM</fullName>
            </value>
            <value>
                <fullName>FSM_Sewerage_Incident_Report</fullName>
            </value>
            <value>
                <fullName>FSM_ReinstatementForm</fullName>
            </value>
            <value>
                <fullName>FSM_RechargeableWorksDamageDescriptionReport</fullName>
            </value>
            <value>
                <fullName>FSM_MeteringJobFeedback</fullName>
            </value>
            <value>
                <fullName>FSM_MeterDetailsForm</fullName>
            </value>
            <value>
                <fullName>FSM_DistributionInterruption</fullName>
            </value>
            <value>
                <fullName>FSM_DistributionFeedback</fullName>
            </value>
            <value>
                <fullName>FSM_SPSStandard</fullName>
            </value>
            <value>
                <fullName>FSM_SPSComplex</fullName>
            </value>
            <value>
                <fullName>FSM_AssetUpdateForm</fullName>
            </value>
            <value>
                <fullName>FSM_VehicleCheck</fullName>
            </value>
            <value>
                <fullName>FSM_RiskAssessmentPaper</fullName>
            </value>
            <value>
                <fullName>FSM_WasteWaterChemicalAcceptanceAndAuthorisationToDischargeForm</fullName>
            </value>
            <value>
                <fullName>FSM_CleanWaterChemicalAcceptanceAndAuthorisationToDischargeAssessment</fullName>
            </value>
            <value>
                <fullName>FSM_WorkingSetPreUseInspection</fullName>
            </value>
            <value>
                <fullName>FSM_HDRiskAssessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>