force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/fields/FSM_Formula__c.field-meta.xml
<CustomField>
    <fullName>FSM_Formula__c</fullName>
    <description>SFI-35, Formula details which need to be applied in the payload, This list will be keep getting updated based on need.</description>
    <label>Formula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date_addDays(1)</fullName>
            </value>
            <value>
                <fullName>DateTime_AddHours(1)</fullName>
            </value>
            <value>
                <fullName>String_SubstringLeft(40)</fullName>
            </value>
            <value>
                <fullName>String_SubstringRight(40)</fullName>
            </value>
            <value>
                <fullName>Decimal_Round</fullName>
            </value>
            <value>
                <fullName>Time_AddMinutes(10)</fullName>
            </value>
            <value>
                <fullName>.addDays</fullName>
                <isActive>false</isActive>
                <label>.addDays</label>
            </value>
            <value>
                <fullName>.contains</fullName>
                <isActive>false</isActive>
                <label>.contains</label>
            </value>
            <value>
                <fullName>date.valueOf</fullName>
                <isActive>false</isActive>
                <label>date.valueOf</label>
            </value>
            <value>
                <fullName>string.valueOf</fullName>
                <isActive>false</isActive>
                <label>string.valueOf</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>