force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/fields/FSM_IsDCFLineItemField__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsDCFLineItemField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFI-35</description>
    <label>Is DCF Line Item Field?</label>
    <type>Checkbox</type>
</CustomField>