force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/fields/FSM_IsFormulaField__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsFormulaField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFI-35, this will be checked if teh field need to be converted based on some formula FSM_Formula__c</description>
    <label>Is Formula Field?</label>
    <type>Checkbox</type>
</CustomField>