force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/fields/FSM_IsParentObjectField__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsParentObjectField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFi-35, this checkbox will be checked if teh field in referred from parent object. like Workorder.Status</description>
    <label>Is Parent Object Field?</label>
    <type>Checkbox</type>
</CustomField>