force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/fields/FSM_JSONLabel__c.field-meta.xml
<CustomField>
    <fullName>FSM_JSONLabel__c</fullName>
    <description>SFI-35</description>
    <label>JSON Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>