force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/fields/FSM_Node__c.field-meta.xml
<CustomField>
    <fullName>FSM_Node__c</fullName>
    <description>SFI-35, to keep the Node name of teh payload</description>
    <inlineHelpText>This field is mandatory, if no node then mention &quot;DCF&quot;</inlineHelpText>
    <label>Node</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>