force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/fields/FSM_ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>FSM_ObjectAPIName__c</fullName>
    <description>Hold the object API names, SFI-35</description>
    <label>Object API Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSM_DataCaptureFormInfra__c</fullName>
            </value>
            <value>
                <fullName>FSM_DataCaptureFormNonInfra__c</fullName>
            </value>
            <value>
                <fullName>FSM_DataCaptureFormLineItems__r</fullName>
            </value>
            <value>
                <fullName>FSM_DataCaptureFormLineItemNonInfras__r</fullName>
            </value>
            <value>
                <fullName>FSM_InfraDataCaptureForm2__c</fullName>
            </value>
            <value>
                <fullName>FSM_InfraDataCaptureLineItem2__r</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>