force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/fields/FSM_PlatformEventField__c.field-meta.xml
<CustomField>
    <fullName>FSM_PlatformEventField__c</fullName>
    <description>SFI-35</description>
    <label>Platform Event Field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSM_DCFLineItemsPayload__c</fullName>
            </value>
            <value>
                <fullName>FSM_DCFPayload1__c</fullName>
            </value>
            <value>
                <fullName>FSM_DCFPayload2__c</fullName>
            </value>
            <value>
                <fullName>FSM_DCFPayload3__c</fullName>
            </value>
            <value>
                <fullName>FSM_DCFPayload4__c</fullName>
            </value>
            <value>
                <fullName>FSM_DCFPayload5__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>