force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/validationRules/FSM_IfChildFieldThenObjAPICorrection.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_IfChildFieldThenObjAPICorrection</fullName>
    <active>true</active>
    <description>SFI-35</description>
    <errorConditionFormula>IF(AND(FSM_IsDCFLineItemField__c, 
	NOT(Contains(TEXT( FSM_ObjectAPIName__c), &apos;DataCaptureFormLine&apos; )), 
	NOT(Contains(TEXT( FSM_ObjectAPIName__c), &apos;DataCaptureLine&apos; ))),true ,false )</errorConditionFormula>
    <errorDisplayField>FSM_ObjectAPIName__c</errorDisplayField>
    <errorMessage>Please choose correct Object Api Name from the Line item Object</errorMessage>
</ValidationRule>