force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/validationRules/FSM_IfFormulaFieldThenFormulaFieldReq.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_IfFormulaFieldThenFormulaFieldReq</fullName>
    <active>true</active>
    <description>SFI-35</description>
    <errorConditionFormula>IF(AND(FSM_IsFormulaField__c, ISBLANK(TEXT(FSM_Formula__c))),true ,false )</errorConditionFormula>
    <errorDisplayField>FSM_Formula__c</errorDisplayField>
    <errorMessage>Formula is mandatory when Is Formula is checked.</errorMessage>
</ValidationRule>