force-app/main/default/objects/FSM_DCFFormFieldMapping__mdt/validationRules/FSM_IfParentFieldThenFieldAPICorrectForm.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_IfParentFieldThenFieldAPICorrectForm</fullName>
    <active>true</active>
    <description>SFI-35</description>
    <errorConditionFormula>IF(AND(FSM_IsParentObjectField__c ,NOT(Contains( FSM_FieldAPIName__c,&apos;__r.&apos;))),true ,false )</errorConditionFormula>
    <errorDisplayField>FSM_FieldAPIName__c</errorDisplayField>
    <errorMessage>If Parent object field the Field API name must format like FSM_WorkOrder__r.Status</errorMessage>
</ValidationRule>